Added Slack integration.

--- a/.env.default
+++ b/.env.default
@@ -5,3 +5,8 @@ HARVEST_EXCLUDE_CLIENTS=
 HARVEST_EXCLUDE_PROJECTS=
 HARVEST_INTERNAL_CLIENTS=
 HARVEST_INTERNAL_PROJECTS=
+SLACK_WEBHOOK_URL=
+SLACK_WEBHOOK_CHANNEL=
+SLACK_WEBHOOK_USERNAME=
+SLACK_WEBHOOK_ICON_URL=
+SLACK_WEBHOOK_ICON_EMOJI=
