--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,39 @@
 {
-    "name": "slim/slim-skeleton",
-    "description": "A Slim Framework skeleton application for rapid development",
-    "keywords": ["microframework", "rest", "router", "psr7"],
-    "homepage": "http://github.com/slimphp/Slim-Skeleton",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Josh Lockhart",
-            "email": "info@joshlockhart.com",
-            "homepage": "http://www.joshlockhart.com/"
-        }
-    ],
+  "name": "slim/slim-skeleton",
+  "description": "A Slim Framework skeleton application for rapid development",
+  "keywords": ["microframework", "rest", "router", "psr7"],
+  "homepage": "http://github.com/slimphp/Slim-Skeleton",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Josh Lockhart",
+      "email": "info@joshlockhart.com",
+      "homepage": "http://www.joshlockhart.com/"
+    }
+  ],
     "require": {
-        "php": ">=5.5.0",
-        "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17",
-        "gridonic/hapi": "dev-master",
-        "vlucas/phpdotenv": "^2.4",
-        "lesstif/php-jira-rest-client": "^1.7.0",
-        "chobie/jira-api-restclient": "^2.0@dev"
-    },
+    "php": ">=5.5.0",
+    "slim/slim": "^3.1",
+    "slim/php-view": "^2.0",
+    "monolog/monolog": "^1.17",
+    "gridonic/hapi": "dev-master",
+    "vlucas/phpdotenv": "^2.4"
+  },
     "require-dev": {
-        "phpunit/phpunit": ">=4.8 < 6.0"
-    },
+    "phpunit/phpunit": ">=4.8 < 6.0"
+  },
+      "autoload": {
+      "psr-4": {
+      "OddStats\\": "src/"
+    }
+  },
     "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-	"scripts": {
-        "start": "php -S 0.0.0.0:8080 -t public public/index.php",
-        "test": "phpunit"
-	}
-
+    "psr-4": {
+    "Tests\\": "tests/"
+    }
+  },
+    "scripts": {
+    "start": "php -S 0.0.0.0:8080 -t public public/index.php",
+    "test": "phpunit"
+  }
 }
