--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "gridonic/hapi": "dev-master",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "tuupola/slim-basic-auth": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
