Use environment variable for FTP host.

--- a/circle.yml
+++ b/circle.yml
@@ -15,4 +15,4 @@ deployment:
   production:
     branch: develop
     commands:
-      - git ftp init -u $FTP_USERNAME -p $FTP_PASSWORD ftp://plesk01.swebby.se/oddstats.se/
+      - git ftp init -u $FTP_USERNAME -p $FTP_PASSWORD ftp://$FTP_HOST
