--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ dependencies:
   pre:
     - sudo apt-get update
     - sudo apt-get install git-ftp
+    - sudo apt-get install wput
 
 test:
   override:
@@ -16,3 +17,4 @@ deployment:
     branch: develop
     commands:
       - git ftp init -u $FTP_USERNAME -p $FTP_PASSWORD ftp://$FTP_HOST
+      - wput vendor ftp://$FTP_USERNAME:$FTP_PASSWORD@$FTP_HOST
