--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,6 @@ dependencies:
   pre:
     - sudo apt-get update
     - sudo apt-get install git-ftp
-    - sudo apt-get install wput
 
 test:
   override:
@@ -16,5 +15,4 @@ deployment:
   production:
     branch: develop
     commands:
-      - git ftp init -u $FTP_USERNAME -p $FTP_PASSWORD ftp://$FTP_HOST
-      - wput vendor ftp://$FTP_USERNAME:$FTP_PASSWORD@$FTP_HOST
+      - git ftp push -u $FTP_USERNAME -p $FTP_PASSWORD ftp://$FTP_HOST
