--- a/circle.yml
+++ b/circle.yml
@@ -15,4 +15,4 @@ deployment:
   production:
     branch: develop
     commands:
-      - git ftp push -u $FTP_USERNAME -p $FTP_PASSWORD ftp://$FTP_HOST
+      - git ftp init -u $FTP_USERNAME -p $FTP_PASSWORD ftp://$FTP_HOST
