--- a/circle.yml
+++ b/circle.yml
@@ -4,8 +4,10 @@ machine:
 
 dependencies:
   pre:
-    - sudo apt-get update
-    - sudo apt-get install git-ftp
+    - git clone https://github.com/git-ftp/git-ftp.git && cd git-ftp
+    - LATEST_VERSION="$(git tag | grep '^[0-9]*\.[0-9]*\.[0-9]*$' | tail -1)"
+    - git checkout "$LATEST_VERSION"
+    - sudo make install
 
 test:
   override:
