Revert "Ignore files with absolute path."
This reverts commit 4746849a56b8e98a1cc402fd74ec7043810715c8.

--- a/.git-ftp-ignore
+++ b/.git-ftp-ignore
@@ -1,10 +1,10 @@
-/.env.default
-/.git-ftp-ignore
-/.git-ftp-include
-/.gitignore
-/circle.yml
-/composer.*
-/CONTRIBUTING.md
-/phpunit.xml
-/README.md
-/tests
+.env.default
+.git-ftp-ignore
+.git-ftp-include
+.gitignore
+circle.yml
+composer.*
+CONTRIBUTING.md
+phpunit.xml
+README.md
+tests
