Increased timeout to 1 hour.

--- a/circle.yml
+++ b/circle.yml
@@ -20,3 +20,4 @@ deployment:
     branch: develop
     commands:
       - git ftp init -u $FTP_USERNAME -p $FTP_PASSWORD ftp://$FTP_HOST
+          timeout: 3600
