--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,5 +6,9 @@ RewriteEngine On
 #
 # RewriteBase /
 
+# Redirect to https://.
+RewriteCond %{SERVER_PORT} ^80$
+RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,NC,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
