--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ test:
 
 deployment:
   production:
-    branch: develop
+    branch: master
     commands:
       - git ftp push -u $FTP_USERNAME -p $FTP_PASSWORD ftp://$FTP_HOST:
           timeout: 3600
