--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,5 +10,9 @@ RewriteEngine On
 RewriteCond %{SERVER_PORT} ^80$
 RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,NC,L]
 
+# Pass the auth credentials to FastCGI.
+# https://github.com/tuupola/slim-basic-auth#usage-with-fastcgi
+RewriteRule .* - [env=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
