Added ability to exclude users based on roles.

--- a/.env.default
+++ b/.env.default
@@ -6,5 +6,6 @@ HARVEST_USER=
 HARVEST_PASSWORD=
 HARVEST_EXCLUDE_CLIENTS=
 HARVEST_EXCLUDE_PROJECTS=
+HARVEST_EXCLUDE_ROLES=
 HARVEST_INTERNAL_CLIENTS=
 HARVEST_INTERNAL_PROJECTS=
