Added support for misc clients and projects.

--- a/.env.default
+++ b/.env.default
@@ -9,3 +9,5 @@ HARVEST_EXCLUDE_PROJECTS=
 HARVEST_EXCLUDE_ROLES=
 HARVEST_INTERNAL_CLIENTS=
 HARVEST_INTERNAL_PROJECTS=
+HARVEST_MISC_CLIENTS=
+HARVEST_MISC_PROJECTS=
